--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 <body>
     <header>
         <h1>Cordelia</h1>
+        <p>Web Developer | Designer | [Other Roles]</p>
     </header>
+    <main>
+        <!-- About Section -->
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a dedicated professional with a passion for [your field]. My goal is to [your goals or mission].</p>
+        </section>
+        <footer>
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+            <p>Phone: [Your Phone Number]</p>
+            <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+        </footer>
 </body>
 </html>
