email and footer was edited

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <h2>About Me</h2>
             <p>I am a dedicated professional with a passion for [your field]. My goal is to [your goals or mission].</p>
         </section>
+        
         <footer>
             <h2>Contact Information</h2>
-            <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
-            <p>Phone: [Your Phone Number]</p>
-            <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+            <p>Email: <a href="cordeliausiokhale@gmail.com">cordeliausiokhale@gmail.com</a></p>
+            <p>Phone: </p>
+            <p>&copy; 2025 cordeliausiokhale. All rights reserved.</p>
         </footer>
 </body>
 </html>
