profile image added

--- a/index.html
+++ b/index.html
@@ -10,14 +10,50 @@
     <header>
         <h1>Cordelia</h1>
         <p>Web Developer | Designer | [Other Roles]</p>
+        <img src="profile-picture.jpg" alt="A professional headshot of Cordelia" class="profile-pic">
     </header>
     <main>
-        <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
             <p>I am a dedicated professional with a passion for [your field]. My goal is to [your goals or mission].</p>
         </section>
-        
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>
+                    HTML & CSS
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="#000" role="img" aria-label="Icon representing HTML and CSS skills">
+                        <rect x="10" y="10" width="44" height="44" rx="8" fill="#F16529"/>
+                        <path d="M20 24h24v4H20zm0 8h24v4H20zm0 8h24v4H20z" fill="#FFF"/>
+                    </svg>
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+                <li>Responsive Design</li>
+                <li>[Other Skills]</li>
+            </ul>
+        </section>
+         <section id="experience">
+            <h2>Experience</h2>
+            <article>
+                <h3>Job Title - Company Name</h3>
+                <p><strong>Duration:</strong> Start Date - End Date</p>
+                <p>Key responsibilities and achievements:</p>
+                <ul>
+                    <li>[Responsibility/Achievement 1]</li>
+                    <li>[Responsibility/Achievement 2]</li>
+                </ul>
+            </article>
+            <article>
+                <h3>Job Title - Company Name</h3>
+                <p><strong>Duration:</strong> Start Date - End Date</p>
+                <p>Key responsibilities and achievements:</p>
+                <ul>
+                    <li>[Responsibility/Achievement 1]</li>
+                    <li>[Responsibility/Achievement 2]</li>
+                </ul>
+            </article>
+        </section>
+    </main>
         <footer>
             <h2>Contact Information</h2>
             <p>Email: <a href="cordeliausiokhale@gmail.com">cordeliausiokhale@gmail.com</a></p>
