education section added

--- a/index.html
+++ b/index.html
@@ -53,11 +53,20 @@
                 </ul>
             </article>
         </section>
+        <section id="education" aria-labelledby="education-heading">
+            <h2 id="education-heading">Education</h2>
+            <article aria-labelledby="bachelors-degree">
+                <h3 id="bachelors-degree">Bachelor's Degree in Education</h3>
+                <p><strong>Institution:</strong> Red River College Polytechnic</p>
+                <p><strong>Graduation Year:</strong> 2026</p>
+            </article>
+        </section>
     </main>
         <footer>
             <h2>Contact Information</h2>
             <p>Email: <a href="cordeliausiokhale@gmail.com">cordeliausiokhale@gmail.com</a></p>
-            <p>Phone: </p>
+            <p>Phone: 431-668-6867</p>
+            <p>GitHub: <a href="https://github.com/Cusiokhale" target="_blank" aria-label="Visit my GitHub profile">github.com/Cusiokhale</a></p>
             <p>&copy; 2025 cordeliausiokhale. All rights reserved.</p>
         </footer>
 </body>
