--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a dedicated professional with a passion for [your field]. My goal is to [your goals or mission].</p>
+            <p>I am an aspiring Application Developer currently pursuing my college education. 
+                With a passion for technology and problem-solving, I am eager to learn and
+                 grow in the field of software development. I am committed to building a 
+                 strong foundation in programming and application design, and I look 
+                 forward to contributing innovative and impactful solutions in the tech industry.</p>
         </section>
         <section id="skills" aria-labelledby="skills-heading">
             <h2 id="skills-heading">Skills</h2>
