profile image added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordelia</h1>
-        <p>Web Developer | Designer | [Other Roles]</p>
+        <p>Web Developer | Designer | </p>
         <img src="profile-picture.jpg" alt="A professional headshot of Cordelia" class="profile-pic">
     </header>
     <main>
@@ -24,10 +24,7 @@
         <section id="skills" aria-labelledby="skills-heading">
             <h2 id="skills-heading">Skills</h2>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 200" role="img" aria-label="Skills list">
-                <!-- Background Rectangle -->
                 <rect x="0" y="0" width="300" height="200" fill="none" stroke="black"></rect>
-                
-                <!-- Skill Titles -->
                 <text x="20" y="50" fill="black">HTML & CSS</text>
                 <text x="20" y="90" fill="black">JavaScript</text>
                 <text x="20" y="130" fill="black">Responsive Design</text>
@@ -39,28 +36,33 @@
          <section id="experience">
             <h2>Experience</h2>
             <article>
-                <h3>Job Title - Company Name</h3>
-                <p><strong>Duration:</strong> Start Date - End Date</p>
+                <h3>Direct Support Worker	 - Life care,  Lagos Nigeria</h3>
+                <p><strong>Duration:</strong>  2021 -  2023</p>
                 <p>Key responsibilities and achievements:</p>
                 <ul>
-                    <li>[Responsibility/Achievement 1]</li>
-                    <li>[Responsibility/Achievement 2]</li>
+                    <li>Recognized for respecting and accommodating diverse patient backgrounds while providing
+                        compassionate care, creating a safe and comfortable environment for clients with emotional 
+and behavioral challenges and supporting both emotional and social development.
+ </li>
+                    <li>Administered prescribed medications with precision, maintained detailed daily logs and
+                        accurate charts, and effectively communicated changes in patient conditions to the healthcare team lead.
+                        </li>
                 </ul>
             </article>
             <article>
-                <h3>Job Title - Company Name</h3>
-                <p><strong>Duration:</strong> Start Date - End Date</p>
+                <h3>Personal support worker - Compassionate Care</h3>
+                <p><strong>Duration:</strong> 2018 - 2021</p>
                 <p>Key responsibilities and achievements:</p>
                 <ul>
-                    <li>[Responsibility/Achievement 1]</li>
-                    <li>[Responsibility/Achievement 2]</li>
+                    <li>Assisting with bathing, dressing, grooming, and toileting</li>
+                    <li>Helping clients with mobility, including transfers from bed to wheelchair.</li>
                 </ul>
             </article>
         </section>
         <section id="education" aria-labelledby="education-heading">
             <h2 id="education-heading">Education</h2>
             <article aria-labelledby="bachelors-degree">
-                <h3 id="bachelors-degree">Bachelor's Degree in Education</h3>
+                <h3 id="bachelors-degree">Diploma Degree in Application Development</h3>
                 <p><strong>Institution:</strong> Red River College Polytechnic</p>
                 <p><strong>Graduation Year:</strong> 2026</p>
             </article>
